removes body overflow hidden prevents refresh
overflow hidden shouldnt be set on html and body elements
switched div to a main element to use for styling and better html
main height calc with header height
sidebar height to 100% instead of 94vh

--- a/apps/courses/src/app/app.component.scss
+++ b/apps/courses/src/app/app.component.scss
@@ -72,7 +72,7 @@ ul.student-name {
 }
 
 .sidenav {
-  height:94vh;
+  height: 100%;
   position: -webkit-sticky;
   position: sticky;
 }
